--- a/Demos/Clients/Remox.dproj
+++ b/Demos/Clients/Remox.dproj
@@ -99,6 +99,7 @@
         <BT_BuildType>Debug</BT_BuildType>
         <UWP_DelphiLogo44>D:\1C_Bases\_vircess.com\_V11\Design\20160117\48x48-3.png</UWP_DelphiLogo44>
         <UWP_DelphiLogo150>D:\1C_Bases\_vircess.com\_V11\Design\20160117\240x240-3.png</UWP_DelphiLogo150>
+        <Debugger_RunParams>/INSTALL</Debugger_RunParams>
     </PropertyGroup>
     <ItemGroup>
         <DelphiCompile Include="$(MainSource)">
@@ -108,7 +109,7 @@
             <Form>MainForm</Form>
         </DCCReference>
         <DCCReference Include="RtcHostSvc.pas">
-            <Form>VircessService</Form>
+            <Form>RemoxService</Form>
             <DesignClass>TService</DesignClass>
         </DCCReference>
         <DCCReference Include="..\Modules\dmSetRegion.pas">
@@ -197,22 +198,16 @@
                 <Platform value="Win32">True</Platform>
             </Platforms>
             <Deployment Version="3">
-                <DeployFile LocalName="Remox.rsm" Configuration="Debug" Class="DebugSymbols">
-                    <Platform Name="Win32">
-                        <RemoteName>Remox.rsm</RemoteName>
-                        <Overwrite>true</Overwrite>
-                    </Platform>
-                </DeployFile>
-                <DeployFile LocalName="rmx_w32.exe" Configuration="Debug" Class="ProjectFile">
-                    <Platform Name="Win32">
-                        <RemoteDir>.\</RemoteDir>
-                        <Overwrite>true</Overwrite>
-                    </Platform>
-                </DeployFile>
                 <DeployFile LocalName="..\..\..\Design\20160117\240x240-3.png" Configuration="Debug" Class="UWP_DelphiLogo150">
                     <Platform Name="Win32">
                         <RemoteDir>Assets\</RemoteDir>
                         <RemoteName>Logo150x150.png</RemoteName>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
+                <DeployFile LocalName="Remox.rsm" Configuration="Debug" Class="DebugSymbols">
+                    <Platform Name="Win32">
+                        <RemoteName>Remox.rsm</RemoteName>
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
@@ -226,6 +221,12 @@
                 <DeployFile LocalName="Remox.exe" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>Remox.exe</RemoteName>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
+                <DeployFile LocalName="rmx_w32.exe" Configuration="Debug" Class="ProjectFile">
+                    <Platform Name="Win32">
+                        <RemoteDir>.\</RemoteDir>
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
