--- a/Demos/Clients/Remox.dproj
+++ b/Demos/Clients/Remox.dproj
@@ -99,6 +99,7 @@
         <BT_BuildType>Debug</BT_BuildType>
         <UWP_DelphiLogo44>C:\_vircess\VCSV3\Demos\Clients\48x48-3.png</UWP_DelphiLogo44>
         <UWP_DelphiLogo150>C:\_vircess\VCSV3\Demos\Clients\240x240-3.png</UWP_DelphiLogo150>
+        <Debugger_RunParams>/INSTALL</Debugger_RunParams>
     </PropertyGroup>
     <ItemGroup>
         <DelphiCompile Include="$(MainSource)">
@@ -165,6 +166,7 @@
         <DCCReference Include="..\Modules\rtcBlankOutForm.pas">
             <Form>fmBlankoutForm</Form>
         </DCCReference>
+        <DCCReference Include="uSetup.pas"/>
         <RcItem Include="rmx_w32.exe">
             <ContainerId>ResourceItem</ContainerId>
             <ResourceType>RCDATA</ResourceType>
