--- a/Demos/Clients/rmx_w32.dproj
+++ b/Demos/Clients/rmx_w32.dproj
@@ -5,7 +5,7 @@
         <FrameworkType>VCL</FrameworkType>
         <MainSource>rmx_w32.dpr</MainSource>
         <Base>True</Base>
-        <Config Condition="'$(Config)'==''">Debug</Config>
+        <Config Condition="'$(Config)'==''">Release</Config>
         <Platform Condition="'$(Platform)'==''">Win32</Platform>
         <TargetedPlatforms>1</TargetedPlatforms>
         <AppType>Application</AppType>
@@ -140,7 +140,10 @@
             </Delphi.Personality>
             <Deployment Version="4">
                 <DeployFile LocalName="Win32\Debug\rmx_w32.exe" Configuration="Debug" Class="ProjectOutput"/>
+                <DeployFile LocalName="Win32\Debug\rmx_w32.exe" Configuration="Debug" Class="ProjectOutput"/>
                 <DeployFile LocalName="rmx_w32.exe" Configuration="Debug" Class="ProjectOutput"/>
+                <DeployFile LocalName="rmx_w32.exe" Configuration="Debug" Class="ProjectOutput"/>
+                <DeployFile LocalName="rmx_w32.exe" Configuration="Release" Class="ProjectOutput"/>
                 <DeployFile LocalName="rmx_w32.exe" Configuration="Release" Class="ProjectOutput"/>
                 <DeployClass Name="AdditionalDebugSymbols">
                     <Platform Name="iOSSimulator">
