--- a/Demos/Clients/Remox.dproj
+++ b/Demos/Clients/Remox.dproj
@@ -205,6 +205,10 @@
         <DCCReference Include="..\Modules\uAcceptEula.pas">
             <Form>fAcceptEULA</Form>
         </DCCReference>
+        <DCCReference Include="NTImport.pas"/>
+        <DCCReference Include="rtcpFileTrans.pas"/>
+        <DCCReference Include="MultiFileTrans.pas"/>
+        <DCCReference Include="FixFileExplorer.pas"/>
         <RcItem Include="rmx_w32.exe">
             <ContainerId>ResourceItem</ContainerId>
             <ResourceType>RCDATA</ResourceType>
