--- a/rmxVideo/rmxPlayaer/rmxPlayaer.dproj
+++ b/rmxVideo/rmxPlayaer/rmxPlayaer.dproj
@@ -5,7 +5,7 @@
         <FrameworkType>VCL</FrameworkType>
         <MainSource>rmxPlayaer.dpr</MainSource>
         <Base>True</Base>
-        <Config Condition="'$(Config)'==''">Release</Config>
+        <Config Condition="'$(Config)'==''">Debug</Config>
         <Platform Condition="'$(Platform)'==''">Win32</Platform>
         <TargetedPlatforms>1</TargetedPlatforms>
         <AppType>Application</AppType>
@@ -112,8 +112,8 @@
         <DCCReference Include="..\..\Lib\rtcScrPlayback.pas"/>
         <DCCReference Include="Convert\ConvertUnit.pas">
             <Form>ConvertForm</Form>
-            <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="SimleTrackBar.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
